--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,14 +2,17 @@
 	<div class="container">
 		<span>Apoios e parcerias:</span>
 		<div class="row center">
-			<img id="parceiros" src="./assets/descomplicat.png">
-			<img id="parceiros" src="./assets/arteDeViver.png">
-			<img id="os"src="./assets/o_s.png">
+			<a href="https://descomplica.com.br/home/a/"><img id="parceiros" src="./assets/descomplicat.png"></a>
+			<a href="https://www.artofliving.org/br-pt"><img id="parceiros" src="./assets/arteDeViver.png"></a>
+			<a href="https://oes.com.br/"><img id="os"src="./assets/o_s.png"></a>
 		</div>
 	</div>
 	<div class="footer-copyright">
 		<div class="container">
-			<span>@2019 Copyright</span>
+			<p>@2019 Copyright</p>
+			<div>Fotos feitas por <a href="https://www.instagram.com/vailathi/">@Vilathi</a></div>
+			<div><p>Icones feitos por <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
+			</div>
 		</div>
 	</div>
 </footer>
