--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,7 @@
+<header>
 <nav class="nav-wrapper">
 	<div>
-		<a href="home.html" class="brand-logo center"><img src="./assets/pecep-logo.png"></a>
+		<a  routerLink="/home" class="brand-logo center"><img src="./assets/pecep-logo.png"></a>
 	</div>
 </nav>
+</header>
