--- a/src/app/pages/conheca/conheca.component.html
+++ b/src/app/pages/conheca/conheca.component.html
@@ -3,6 +3,7 @@
 		<h1>Conheça o PECEP:</h1>
 		<div class="row">
 			<div class="col 8 m5">
+				<section>
 				<h2>O que é?</h2>
 				<p><span id="negrito">O Projeto de Ensino Cultural Educação Popular (PECEP)</span> é uma ONG que oferece curso preparatório para o vestibular</p>
 				<h2>Como surgiu?</h2>
@@ -15,11 +16,13 @@
 				<p>O processo seletivo acontece de dezembro a janeiro e os interessados devem se inscrever através do site do PECEP em </p>
 				<h2>Quantas vagas oferece?</h2>
 				<p>O <span id="negrito">PECEP</span> disponibiliza por ano duas turmas com 30 estudantes cada.</p>
+				</section>
 			</div>
 			<div class="col 8 m5">
 				 <div class="video-container">
         			<iframe width="900" height="600" src="https://www.youtube.com/embed/OE27UNSkkW4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       			</div>
+      			<section>
 				<h2>Onde são as aulas?</h2>
 				<p>O <span id="negrito">PECEP</span> funciona na <span id="negrito">Rua Marquês de São Vicente 355, Gávea</span> através de uma parceria com a Escola Parque.</p>
 				<h2>Quando ocorrem as aulas?</h2>
@@ -28,6 +31,7 @@
 				<p>São oferecidas as disciplinas de Biologia, Química, Física, Matemática, Geografia, História, Português, Literatura, Redação, Argumentação, Filosofia, Sociologia, Espanhol, Inglês e Educação Física.</p>
 				<h2>Quem são os professores?</h2>
 				<p>Os <span id="negrito">professores</span> são todos voluntários, com experiência de atuação na área e passaram por um rigoroso processo seletivo.</p>
+				</section>
 			</div>
 		</div>
 	</div>
